deploy/manifests/latte-demo/deploy-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: latte-demo-frontend
  namespace: personal-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: latte-demo-frontend
  template:
    metadata:
      labels:
        app: latte-demo-frontend
    spec:
      containers:
      - image: raphaelreyna/latte-demo:v0.1.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: latte-demo-frontend
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 10m
            memory: 32Mi
          requests:
            cpu: 5m
            memory: 16Mi
