deploy/manifests/latte-demo/svc-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: latte-demo-backend
  namespace: personal-site
spec:
  selector:
    app: latte-demo-backend
  ports:
    - name: http
      port: 27182
      protocol: TCP
      targetPort: 27182
