deploy/manifests/latte-demo/svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: latte-demo-frontend
  namespace: personal-site
spec:
  selector:
    app: latte-demo-frontend
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
