deploy/manifests/latte-demo/ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/cors-allow-headers: Authorization, origin, accept
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: latte-demo-backend
  namespace: personal-site
spec:
  ingressClassName: nginx
  rules:
  - host: api.rphlrn.com
    http:
      paths:
      - backend:
          service:
            name: latte-demo-backend
            port:
              number: 27182
        path: /latte(/|$)(.*)
        pathType: Prefix
  tls:
  - hosts:
    - api.rphlrn.com
    secretName: api-rphlrn-com-tls
